Set correct sizes on mobile

--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -61,6 +61,12 @@ body {
     margin-right: 32px;
   }
 
+  &__image {
+    @media (max-width: 576px) {
+      max-height: 52px;
+    }
+  }
+
   &__link {
     background-color: $black;
     color: $white;
@@ -119,6 +125,10 @@ body {
     @media (min-width: 992px) {
       display: none;
     }
+
+    @media (max-width: 576px) {
+      padding: 10px;
+    }
   }
 
   .navbar {
@@ -176,6 +186,10 @@ body {
       text-decoration: underline;
       font-weight: $font-weight-bold;
       font-size: 15px;
+
+      @media (max-width: 576px) {
+        font-size: 13px;
+      }
     }
 
     width: 180px;
